# Permissions-Serializer

./: .gitignore  CMakeLists.txt  README.md
doc/: RS_components.drawio
inc/: cli_interface.h  encrypter.h  gui_interface.h  perms_manip.h  perms_serializer.h
src/: cli_interface.cpp  encrypter.cpp  gui_interface.cpp  main.cpp  perms_manip.cpp  perms_serializer.cpp
